/******************************************************************************
 *                                                                            *
 *                    Copyright 2016 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto2";

package core.net.sequences;

option java_package = "com.subterranean_security.crimson.proto.core.net.sequences";

message MI_StreamStart {
	required Param param = 1;
}

message MI_StreamStop {
	required int32 streamID = 1;
	optional int32 CID = 2;
}

message EV_StreamData {
	required int32 streamID = 1;
	
	//remote
	optional EventData event_data = 2;
	optional DirtyRect dirty_rect = 4;
	optional DirtyBlock dirty_block = 5;
}

message EV_EndpointClosed {
	required int32 CVID = 1;
}

message EventData {
	optional int32 keyPressed = 1;
	optional int32 keyReleased = 2;
	optional int32 mousePressed = 3;
	optional int32 mouseReleased = 4;
	
	optional int32 mouseMovedX = 5;
	optional int32 mouseMovedY = 6;
	
	optional double scale_update = 7;

}

message DirtyRect {
	required int32 sx = 1;
	required int32 sy = 2;
	
	//size
	required int32 w = 3;
	required int32 h = 4;
	
	repeated int32 RGBA = 5;
}

message DirtyBlock {
	required int32 block_id = 1;
	repeated int32 RGB = 2;
}

message Param {
	required int32 streamID = 1;
	required int32 masterID = 2;
	optional int32 slaveID = 3;
	optional int32 period = 4;
	
	optional InfoParam info_param = 5;
	optional SubscriberParam subscriber_param = 6;
	optional RemoteParam remote_param = 7;
}

message InfoParam {
	optional string cpu_id = 1;
	optional string nic_id = 2;
	repeated int32 key = 3;
}

message RemoteParam {
	enum RMethod {
		POLL = 1;
		NATIVE = 2;
	}

	required RMethod rmethod = 1;
	required string monitor = 2;
	required int32 color_type = 3;
	required float comp_type = 4;

}

message SubscriberParam {
	optional bool keylog = 1;
}